@@ -262,13 +262,17 @@ static void script_window_update (windata_t *vwin, const char *fname)
     strcpy(vwin->fname, fname);
     g_free(title);
 
+    if (vwin->role == VIEW_LOG || vwin->role == VIEW_SCRIPT) {
+	vwin->role = EDIT_SCRIPT;
+    }
+
     /* make the window editable */
 #ifndef OLD_GTK
     if (!gtk_text_view_get_editable(GTK_TEXT_VIEW(vwin->w))) {
 	file_view_set_editable(vwin);
     }
 #else
-    if (vwin->role == VIEW_SCRIPT) {
+    if (vwin->role == EDIT_SCRIPT) {
 	file_view_set_editable(vwin);
     } 
 #endif
