@@ -115,6 +115,7 @@ float gui_scale;
 int expert = FALSE; 
 int updater = FALSE;
 int want_toolbar = TRUE;
+int winsize = TRUE;
 int mainwin_width = 520;
 int mainwin_height = 420;
 
@@ -729,6 +730,19 @@ static void force_language (int f)
 
 #endif /* ENABLE_NLS */
 
+static void record_filearg (char *targ, const char *src)
+{
+    if (*src == '.') {
+	gchar *cdir = g_get_current_dir();
+	gchar *tmp = g_build_filename(cdir, src, NULL);
+	
+	strcpy(targ, tmp);
+	g_free(cdir);
+	g_free(tmp);
+    } else {
+	strcpy(targ, src);
+    }
+}
 
 int main (int argc, char *argv[])
 {
@@ -887,9 +901,10 @@ int main (int argc, char *argv[])
 	    exit(EXIT_FAILURE);
 	}
 #else
-	strcpy(paths.datfile, filearg);
+	record_filearg(paths.datfile, filearg);
 #endif
-	/* record the name the user supplied */
+
+	/* keep a copy of input filename */
 	strcpy(trydatfile, paths.datfile);
 
 	ftype = detect_filetype(paths.datfile, &paths, prn);
@@ -1266,7 +1281,7 @@ static GtkWidget *make_main_window (int gui_get_data)
 
     gui_scale = get_gui_scale();
 
-    if (mainwin_width <= 200 || mainwin_height <= 200) {
+    if (!winsize || mainwin_width <= 200 || mainwin_height <= 200) {
 	mainwin_width = 580 * gui_scale;
 	mainwin_height = 420 *gui_scale;
     }
